@@ -16,7 +16,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclBasic.c,v 1.82.2.147 2009/12/09 02:50:35 dgp Exp $
+ * RCS: @(#) $Id: tclBasic.c,v 1.82.2.148 2009/12/09 16:50:00 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -1545,7 +1545,7 @@ DeleteInterpProc(
 		ckfree((char *) eclPtr->loc);
 	    }
 
-	    Tcl_DeleteHashTable (&eclPtr->litInfo);
+	    Tcl_DeleteHashTable(&eclPtr->litInfo);
 
 	    ckfree((char *) eclPtr);
 	    Tcl_DeleteHashEntry(hPtr);
@@ -3559,6 +3559,7 @@ Tcl_GetMathFuncInfo(
 	Tcl_AppendToObj(message, name, -1);
 	Tcl_AppendToObj(message, "\"", 1);
 	Tcl_SetObjResult(interp, message);
+	Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "MATHFUNC", name, NULL);
 	*numArgsPtr = -1;
 	*argTypesPtr = NULL;
 	*procPtr = NULL;
@@ -5052,7 +5053,7 @@ TclEvalScriptTokens(
 
 	    TclAdvanceLines(&wordLine, wordStart, tokenPtr->start);
 	    TclAdvanceContinuations (&wordLine, &wordCLNext,
-					 tokenPtr->start - outerScript);
+		    tokenPtr->start - outerScript);
 	    wordStart = tokenPtr->start;
 
 	    lines[objc] = TclWordKnownAtCompileTime(tokenPtr, NULL)
@@ -5641,7 +5642,7 @@ TclArgumentBCRelease(
 	CFWordBC *xPtr = Tcl_GetHashValue(hPtr);
 
 	if (xPtr != cfwPtr) {
-	    Tcl_Panic ("TclArgumentBC Enter/Release Mismatch");
+	    Tcl_Panic("TclArgumentBC Enter/Release Mismatch");
 	}
 
 	if (cfwPtr->prevPtr) {
@@ -5982,7 +5983,7 @@ TclNREvalObjEx(
 	codePtr = TclCompileObj(interp, objPtr, invoker, word);
 
 	TclNRAddCallback(interp, TEOEx_ByteCodeCallback, savedVarFramePtr,
-		    objPtr, INT2PTR(allowExceptions), NULL);
+		objPtr, INT2PTR(allowExceptions), NULL);
 	TclNRAddCallback(interp, NRCallTEBC, INT2PTR(TCL_NR_BC_TYPE), codePtr,
 		NULL, NULL);
 	return TCL_OK;
@@ -6022,11 +6023,11 @@ TclNREvalObjEx(
 	 */
 
 	ContLineLoc *saveCLLocPtr = iPtr->scriptCLLocPtr;
-	ContLineLoc *clLocPtr = TclContinuationsGet (objPtr);
+	ContLineLoc *clLocPtr = TclContinuationsGet(objPtr);
 
 	if (clLocPtr) {
 	    iPtr->scriptCLLocPtr = clLocPtr;
-	    Tcl_Preserve (iPtr->scriptCLLocPtr);
+	    Tcl_Preserve(iPtr->scriptCLLocPtr);
 	} else {
 	    iPtr->scriptCLLocPtr = NULL;
 	}
@@ -6103,7 +6104,7 @@ TclNREvalObjEx(
 	 */
 
 	if (iPtr->scriptCLLocPtr) {
-	    Tcl_Release (iPtr->scriptCLLocPtr);
+	    Tcl_Release(iPtr->scriptCLLocPtr);
 	}
 	iPtr->scriptCLLocPtr = saveCLLocPtr;
 	TclDecrRefCount(objPtr);
@@ -6206,6 +6207,8 @@ ProcessUnexpectedResult(
 				 * result code was returned. */
     int returnCode)		/* The unexpected result code. */
 {
+    char buf[TCL_INTEGER_SPACE];
+
     Tcl_ResetResult(interp);
     if (returnCode == TCL_BREAK) {
 	Tcl_AppendResult(interp,
@@ -6217,6 +6220,8 @@ ProcessUnexpectedResult(
 	Tcl_SetObjResult(interp, Tcl_ObjPrintf(
 		"command returned bad code: %d", returnCode));
     }
+    sprintf(buf, "%d", returnCode);
+    Tcl_SetErrorCode(interp, "TCL", "UNEXPECTED_RESULT_CODE", buf, NULL);
 }
 
 /*
@@ -6633,7 +6638,7 @@ Tcl_ExprString(
 	 * An empty string. Just set the interpreter's result to 0.
 	 */
 
-	Tcl_SetResult(interp, "0", TCL_VOLATILE);
+	Tcl_SetObjResult(interp, Tcl_NewIntObj(0));
     } else {
 	Tcl_Obj *resultPtr, *exprObj = Tcl_NewStringObj(expr, -1);
 
@@ -6644,13 +6649,13 @@ Tcl_ExprString(
 	    Tcl_SetObjResult(interp, resultPtr);
 	    Tcl_DecrRefCount(resultPtr);
 	}
-
-	/*
-	 * Force the string rep of the interp result.
-	 */
-
-	(void) Tcl_GetStringResult(interp);
     }
+
+    /*
+     * Force the string rep of the interp result.
+     */
+
+    (void) Tcl_GetStringResult(interp);
     return code;
 }
 
@@ -7185,6 +7190,8 @@ ExprIsqrtFunc(
 
   negarg:
     Tcl_SetResult(interp, "square root of negative argument", TCL_STATIC);
+    Tcl_SetErrorCode(interp, "ARITH", "DOMAIN",
+	    "domain error: argument not in valid range", NULL);
     return TCL_ERROR;
 }
 
@@ -7855,6 +7862,7 @@ MathFuncWrongNumArgs(
     Tcl_SetObjResult(interp, Tcl_ObjPrintf(
 	    "too %s arguments for math function \"%s\"",
 	    (found < expected ? "few" : "many"), name));
+    Tcl_SetErrorCode(interp, "TCL", "WRONGARGS", NULL);
 }
 
 #ifdef USE_DTRACE
@@ -8134,7 +8142,7 @@ Tcl_NREvalObjv(
 {
     return TclNREvalObjv(interp, objc, objv, flags, NULL);
 }
-
+
 int
 Tcl_NRCmdSwap(
     Tcl_Interp *interp,
@@ -8171,7 +8179,7 @@ Tcl_NRCmdSwap(
  */
 
 void
-TclSpliceTailcall (
+TclSpliceTailcall(
     Tcl_Interp *interp,
     TEOV_callback *tailcallPtr)
 {
@@ -8193,8 +8201,8 @@ TclSpliceTailcall (
     }
     if (!runPtr) {
 	/*
-	 * If we are tailcalling out of a coroutine, the splicing spot is
-	 * in the caller's execEnv: go find it!
+	 * If we are tailcalling out of a coroutine, the splicing spot is in
+	 * the caller's execEnv: go find it!
 	 */
 
 	CoroutineData *corPtr = iPtr->execEnvPtr->corPtr;
@@ -8242,6 +8250,7 @@ TclNRTailcallObjCmd(
 	Tcl_SetResult(interp,
 		"tailcall can only be called from a proc or lambda",
 		TCL_STATIC);
+	Tcl_SetErrorCode(interp, "TCL", "TAILCALL", "ILLEGAL", NULL);
 	return TCL_ERROR;
     }
 
@@ -8271,7 +8280,7 @@ TclNRTailcallObjCmd(
      */
 
     if (iPtr->cmdFramePtr->type == TCL_LOCATION_BC) {
-	TclArgumentBCRelease (interp, iPtr->cmdFramePtr);
+	TclArgumentBCRelease(interp, iPtr->cmdFramePtr);
     }
 
     TclNRAddCallback(interp, NRTailcallEval, listPtr, nsObjPtr, NULL, NULL);
@@ -8434,6 +8443,7 @@ TclNRYieldObjCmd(
     if (!corPtr) {
 	Tcl_SetResult(interp, "yield can only be called in a coroutine",
 		TCL_STATIC);
+	Tcl_SetErrorCode(interp, "TCL", "COROUTINE", "ILLEGAL_YIELD", NULL);
 	return TCL_ERROR;
     }
 
@@ -8471,6 +8481,7 @@ TclNRYieldToObjCmd(
     if (!corPtr) {
 	Tcl_SetResult(interp, "yieldTo can only be called in a coroutine",
 		TCL_STATIC);
+	Tcl_SetErrorCode(interp, "TCL", "COROUTINE", "ILLEGAL_YIELD", NULL);
 	return TCL_ERROR;
     }
 
